<?xml version="1.0"?>
<package format="3">
  <name>gazebo_traffic_light</name>
  <version>0.1.0</version>
  <description>ROS2 Gazebo traffic light plugin</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>TODO: License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
